<resources>
    <string name="app_name">Posyandu Grand</string>
    <string name="welcome_message">Selamat Datang di Aplikasi Posyandu</string>
    <string name="add_child">Tambah Data Anak</string>
    <string name="child_name">Nama Anak</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="parent_name">Nama Orang Tua</string>
    <string name="save">Simpan Data</string>
    <string name="cancel">Batal</string>
    <string name="data_anak">Data Anak</string>
    <string name="info_kesehatan">Info Kesehatan</string>
    <string name="riwayat">Riwayat</string>
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="error_empty_fields">Harap isi semua bidang</string>
    <string name="success_save">Data berhasil disimpan</string>

    <!-- Login Strings -->
    <string name="login_title">Masuk ke Posyandu</string>
    <string name="login_subtitle">Silakan masuk untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Masuk</string>
    <string name="error_invalid_login">Username atau Password salah</string>
    <string name="logout">Keluar</string>

    <!-- Navigation Strings -->
    <string name="menu_home">Beranda</string>
    <string name="menu_about">Tentang</string>
    <string name="menu_profile">Profil</string>

    <!-- Profile Strings -->
    <string name="profile_title">Profil Pengembang</string>
    <string name="dev_name_label">Nama:</string>
    <string name="dev_name_value">Grand</string>
    <string name="dev_role">Android Developer</string>
    <string name="dev_description">Aplikasi ini dikembangkan untuk memodernisasi pendataan Posyandu secara digital dan efisien.</string>
    <string name="dev_about_title">Tentang Pengembang</string>

    <!-- About Strings -->
    <string name="about_title">Tentang Aplikasi</string>
    <string name="about_content">Posyandu Grand adalah solusi mobile untuk mencatat perkembangan balita, jadwal imunisasi, dan edukasi kesehatan bagi orang tua.</string>
    <string name="app_version">Versi 1.0.0</string>

    <!-- Home UI Strings -->
    <string name="home_hello">Halo, Orang Tua Hebat!</string>
    <string name="home_description">Pantau terus tumbuh kembang buah hati tercinta.</string>
    <string name="home_summary_title">Ringkasan Hari Ini</string>
    <string name="home_card_weighing">Penimbangan</string>
    <string name="home_card_immunization">Imunisasi</string>
    <string name="home_card_education">Edukasi</string>
    <string name="home_next_schedule">Jadwal Mendatang</string>
    <string name="home_date_dummy">Kamis, 15 Desember 2024</string>
    <string name="home_reg_title">Pendaftaran Baru</string>
    <string name="home_reg_subtitle">Daftarkan balita Anda di sini</string>
    <string name="home_btn_start">Mulai</string>
    <string name="home_info_balita">Informasi Balita</string>
    <string name="home_label_gender">Jenis Kelamin</string>
</resources>